FIX: Added follow/unfollow button. UPDATE: Social media content alignment.

--- a/Algoverse-app/src/app/modules/profile/profile.component.scss
+++ b/Algoverse-app/src/app/modules/profile/profile.component.scss
@@ -56,16 +56,8 @@
     .social-media-container {
       display: flex;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start;
       gap: 20px;
-      padding: 10px 25px;
-      background-color: #ffffff;
-      position: absolute;
-      border-radius: 0 0 12px 12px;
-      min-width: 270px;
-      left: 50%;
-      top: 0;
-      transform: translateX(-50%);
 
       img {
         object-fit: contain;
